MVP completed by finishing styling and spacing of components. Still some minor bugs.

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,8 +1,12 @@
+.main-background {
+  background-color: #a1cff5;
+}
 .saved-list-outer-container {
   display: flex;
   flex-flow: row nowrap;
   width: 100%;
-  border: 1px solid darkblue;
+  background-color: #c4def5;
+  /* border: 1px solid darkblue; */
   box-sizing: border-box;
   padding: 3%;
   margin: 0.7% 0% 1% 0%;
@@ -17,9 +21,9 @@
   justify-content: center;
   align-items: center;
   border: 1px solid darkblue;
+  border-radius: 10px;
 }
 .home-button {
-  /* border: 1px solid darkblue; */
   box-sizing: border-box;
   padding: 2% 2% 1.75% 2%;
   text-decoration: none;
@@ -28,6 +32,14 @@
 .movie-card {
   width: 100%;
   border: 1px solid darkblue;
+  background-color: #c4def5;
+  border-radius: 15px;
+  box-sizing: border-box;
+  padding: 5%;
+}
+.movie-title {
+  text-decoration: none;
+  color: white;
 }
 .movie-details-container {
   display: flex;
@@ -52,4 +64,6 @@
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+}
+.movie-page-title {
 }
